--- a/portfolio.html
+++ b/portfolio.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
  <body>
  <!-- Header -->
@@ -26,67 +27,83 @@
  </header>
  <!--Main-->
  <main>
+    <!-- Progect-->
   <section>
-    <h1>Ефективні рішення для вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
+  <ul>
+    <li><button type="button">Усі</button></li>
+    <li><button type="button">Веб-сайти</button></li>
+    <li><button type="button">Додатки</button></li>
+    <li><button type="button">Дизайн</button></li>
+    <li><button type="button">Маркетинг</button></li>
+  </ul> 
   </section>
- <!-- Cliemnt -->
- <section>
-    <h2 hidden>Переваги для кліентів</h2> 
-    <ul>
-        <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-        <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </li>
-        <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </li>
-        <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </li>
-    </ul>
- </section>
- <!-- Services -->
- <section>
-    <h2>Чим ми займаємося</h2>
-    <ul>
-        <li><img src="./img/box1.jpg" alt="keyboard_Laptop" width="370" height="294"></li>
-        <li><img src="./img/box2.jpg" alt="phone_man_hand" width="370" height="294"></li>
-        <li><img src="./img/box3.jpg" alt="Laptop_rainbow" width="370" height="294"></li>
-    </ul>
- </section>
- <!-- Team -->
- <section>
-    <h2>Наша команда</h2>
-    <ul>
-        <li>
-            <img src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-        </li>
-        <li>
-            <img src="./img/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-        </li>
-        <li>
-            <img src="./img/img3.jpg" alt="Микола Тарасов" width="270" height="260">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
-        </li>
-        <li>
-            <img src="./img/img4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-        </li>
-    </ul>
- </section>
+  <section>
+  <ul>
+    <li>
+        <div>
+            <img src="./img/img1.jpg" alt="laptop" width="370" height="294">
+            <p>Технокряк</p>
+            <p>Веб-сайт</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img2.jpg" alt="basketball" width="370" height="294">
+            <p>Постер New Orlean vs Golden Star</p>
+            <p>Дизайн</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img3.jpg" alt="Seafood" width="370" height="294">
+            <p>Ресторан Seafood</p>
+            <p>Додаток</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img4.jpg" alt="hearphones" width="370" height="294">
+            <p>Проєкт Prime</p>
+            <p>Маркетинг</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img5.jpg" alt="Boxes" width="370" height="294">
+            <p>Проєкт Boxes</p>
+            <p>Додаток</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img6.jpg" alt="Monitor" width="370" height="294">
+            <p>Inspiration has no Borders</p>
+            <p>Веб-сайт</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img7.jpg" alt="Journal" width="370" height="294">
+            <p>Видання Limited Edition</p>
+            <p>Дизайн</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img8.jpg" alt="Tag" width="370" height="294">
+            <p>Проєкт LAB</p>
+            <p>Маркетинг</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="./img/img9.jpg" alt="Notebook" width="370" height="294">
+            <p>Growing Business</p>
+            <p>Додаток</p>
+        </div>
+    </li>
+  </ul>
+  </section>
  </main>
  <!-- Footer -->
  <footer> 
