--- a/portfolio.html
+++ b/portfolio.html
@@ -4,117 +4,125 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" 
+          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" 
+          rel="stylesheet">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
  <body>
  <!-- Header -->
   <header>
-  <nav>
-    <a href="./index.html"><span>Web</span>Studio</a>
-
-    <ul>
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+  <nav class="header_nav">
+    <a class="header_logo" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
+    <ul class="header_list_l">
+        <li class="header_item"><a class="header_item_l" href="./index.html">Студія</a></li>
+        <li class="header_item"><a class="header_item_l" href="./portfolio.html">Портфоліо</a></li>
+        <li class="header_item"><a class="header_item_l" href="">Контакти</a></li>
     </ul>
   </nav>
 
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <ul class="header_nav_l">
+      <li class="header_nav_l_a"><a class="header_nav_l_adress" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="header_nav_l_a"><a class="header_nav_l_adress" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
  </header>
  <!--Main-->
  <main>
     <!-- Progect-->
-  <section>
-  <ul>
-    <li><button type="button">Усі</button></li>
-    <li><button type="button">Веб-сайти</button></li>
-    <li><button type="button">Додатки</button></li>
-    <li><button type="button">Дизайн</button></li>
-    <li><button type="button">Маркетинг</button></li>
+    <h1 hidden>Наші роботи</h1>
+  <section class="progect">
+  <ul class="progect_l">
+    <li class="progect_list"><button type="button" class="progect_list_b">Усі</button></li>
+    <li class="progect_list"><button type="button" class="progect_list_b">Веб-сайти</button></li>
+    <li class="progect_list"><button type="button" class="progect_list_b">Додатки</button></li>
+    <li class="progect_list"><button type="button" class="progect_list_b">Дизайн</button></li>
+    <li class="progect_list"><button type="button" class="progect_list_b">Маркетинг</button></li>
   </ul> 
   </section>
-  <section>
-  <ul>
-    <li>
-        <div>
+<!--Images-->
+  <ul class="img">
+    <li class="img_l">
+        <a href="#">
             <img src="./img/img1.jpg" alt="laptop" width="370" height="294">
-            <p>Технокряк</p>
-            <p>Веб-сайт</p>
-        </div>
+            <h2 class="img_h2">Технокряк</h2>
+            <p class="img_p">Веб-сайт</p> 
+        </a>
     </li>
-    <li>
-        <div>
-            <img src="./img/img2.jpg" alt="basketball" width="370" height="294">
-            <p>Постер New Orlean vs Golden Star</p>
-            <p>Дизайн</p>
-        </div>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img2.jpg" alt="basketball" width="370" height="294">
+            <h2 class="img_h2">Постер New Orlean vs Golden Star</h2>
+            <p class="img_p">Дизайн</p>
+        </a>
     </li>
-    <li>
-        <div>
-            <img src="./img/img3.jpg" alt="Seafood" width="370" height="294">
-            <p>Ресторан Seafood</p>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img3.jpg" alt="Seafood" width="370" height="294">
+            <h2 class="img_h2">Ресторан Seafood</h2>
+            <p class="img_p">Додаток</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img4.jpg" alt="hearphones" width="370" height="294">
+            <h2 class="img_h2">Проєкт Prime</h2>
+            <p class="img_p">Маркетинг</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img5.jpg" alt="Boxes" width="370" height="294">
+            <h2 class="img_h2">Проєкт Boxes</h2>
+            <p class="img_p">Додаток</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img6.jpg" alt="Monitor" width="370" height="294">
+            <h2 class="img_h2">Inspiration has no Borders</h2>
+            <p class="img_p">Веб-сайт</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img7.jpg" alt="Journal" width="370" height="294">
+            <h2 class="img_h2">Видання Limited Edition</h2>
+            <p class="img_p">Дизайн</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img8.jpg" alt="Tag" width="370" height="294">
+            <h2 class="img_h2">Проєкт LAB</h2>
+            <p class="img_p">Маркетинг</p>
+        </a>
+    </li>
+    <li class="img_l">
+        <a class="img_list" href="#">
+            <img class="img_list_l" src="./img/img9.jpg" alt="Notebook" width="370" height="294">
+            <h2 class="img_h2">Growing Business</h2>
             <p>Додаток</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img4.jpg" alt="hearphones" width="370" height="294">
-            <p>Проєкт Prime</p>
-            <p>Маркетинг</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img5.jpg" alt="Boxes" width="370" height="294">
-            <p>Проєкт Boxes</p>
-            <p>Додаток</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img6.jpg" alt="Monitor" width="370" height="294">
-            <p>Inspiration has no Borders</p>
-            <p>Веб-сайт</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img7.jpg" alt="Journal" width="370" height="294">
-            <p>Видання Limited Edition</p>
-            <p>Дизайн</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img8.jpg" alt="Tag" width="370" height="294">
-            <p>Проєкт LAB</p>
-            <p>Маркетинг</p>
-        </div>
-    </li>
-    <li>
-        <div>
-            <img src="./img/img9.jpg" alt="Notebook" width="370" height="294">
-            <p>Growing Business</p>
-            <p>Додаток</p>
-        </div>
+        </a>
     </li>
   </ul>
-  </section>
  </main>
  <!-- Footer -->
- <footer> 
-  <a href="./index.html"><span>Web</span>Studio</a>
-   <address>
-    <ul>
-      <li><a target="_blank" rel="noopener noreferrer nofollow" href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
+ <footer class="footer"> 
+  <a class="footer_l" href="./index.html"><span>Web</span>Studio</a>
+   <address class="footer_a">
+    <ul class="footer_l">
+      <li class="footer_list"><a class="footer_list_adr" target="_blank" rel="noopener noreferrer nofollow" href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
                                   м. Київ, пр-т Лесі Українки, 26</a></li>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <li class="footer_list"><a class="footer_list_mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="footer_list"><a class="footer_list_tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
    </address>
  </footer>
 </html>
+
