--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,13 @@
     <a class="header_logo link" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
     <ul class="header_list_l list">
         <li class="header_item"><a class="header_item_l link" href="./index.html">Студія</a></li>
-        <li class="header_item"><a class="header_item_l link active-link" href="./portfolio.html">Портфоліо</a></li>
+        <li class="header_item"><a class="header_item_l link" href="./portfolio.html">Портфоліо</a></li>
         <li class="header_item"><a class="header_item_l link" href="#">Контакти</a></li>
     </ul>
   </nav>
 
     <ul class="header_nav_l list link">
-      <li class="header_nav_l_a"><a class="header_nav_l_link link active-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li class="header_nav_l_a"><a class="header_nav_l_link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="header_nav_l_a"><a class="header_nav_l_tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
  </header>
