--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </ul>
   </nav>
 
-    <ul class="header_nav_l list link">
+    <ul class="header_nav_l list">
       <li class="header_nav_l_a"><a class="header_nav_l_link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       <li class="header_nav_l_a"><a class="header_nav_l_tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
@@ -46,22 +46,22 @@
   </ul> 
   </section>
 <!--Images-->
-  <ul class="img">
-    <li class="img_l list">
+  <ul class="img list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l link" src="./img/img12.jpg" alt="laptop" width="370" height="294">
             <h2 class="img_h2">Технокряк</h2>
             <p class="img_p">Веб-сайт</p> 
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img22.jpg" alt="basketball" width="370" height="294">
             <h2 class="img_h2">Постер New Orlean vs Golden Star</h2>
             <p class="img_p">Дизайн</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img32.jpg" alt="Seafood" width="370" height="294">
             <h2 class="img_h2">Ресторан Seafood</h2>
@@ -75,35 +75,35 @@
             <p class="img_p">Маркетинг</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img52.jpg" alt="Boxes" width="370" height="294">
             <h2 class="img_h2">Проєкт Boxes</h2>
             <p class="img_p">Додаток</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img62.jpg" alt="Monitor" width="370" height="294">
             <h2 class="img_h2">Inspiration has no Borders</h2>
             <p class="img_p">Веб-сайт</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img72.jpg" alt="Journal" width="370" height="294">
             <h2 class="img_h2">Видання Limited Edition</h2>
             <p class="img_p">Дизайн</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img82.jpg" alt="Tag" width="370" height="294">
             <h2 class="img_h2">Проєкт LAB</h2>
             <p class="img_p">Маркетинг</p>
         </a>
     </li>
-    <li class="img_l list">
+    <li class="img_l">
         <a class="img_list link" href="#">
             <img class="img_list_l" src="./img/img92.jpg" alt="Notebook" width="370" height="294">
             <h2 class="img_h2">Growing Business</h2>
