--- a/index.html
+++ b/index.html
@@ -4,100 +4,111 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
  <body>
  <!-- Header -->
-  <header>
-  <nav>
-    <a href="./index.html"><span>Web</span>Studio</a>
+ <header>
+    <nav class="header_nav">
+        <a class="header_logo link" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
+        <ul class="header_list_l list">
+            <li class="header_item"><a class="header_item_l link" href="./index.html">Студія</a></li>
+            <li class="header_item"><a class="header_item_l link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="header_item"><a class="header_item_l link" href="#">Контакти</a></li>
+        </ul>
+    </nav>
 
-    <ul>
-        <li><a href="">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+    <ul class="header_nav_l list link">
+        <li class="header_nav_l_a"><a class="header_nav_l_link link"
+                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="header_nav_l_a"><a class="header_nav_l_tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
-  </nav>
-
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
- </header>
+</header>
  <!--Main-->
  <main>
-  <section>
+  <section class="section_h1">
     <h1>Ефективні рішення для вашого бізнесу</h1>
-    <button type="button">Замовити послугу</button>
+    <button type="button" class="progect_list_bi">Замовити послугу</button>
   </section>
- <!-- Cliemnt -->
+ <!-- Client -->
  <section>
     <h2 hidden>Переваги для кліентів</h2> 
-    <ul>
+    <ul class="benefits list">
         <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="name_benef">Увага до деталей</h3>
+            <p class="benef_txt">Ідейні міркування, і навіть початок </br>
+                 повсякденної роботи з формування </br>
+                  позиції.</p>
         </li>
         <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="name_benef">Пунктуальність</h3>
+            <p class="benef_txt">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="name_benef">Планування</h3>
+            <p class="benef_txt">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="name_benef">Сучасні технології</h3>
+            <p class="benef_txt">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
     </ul>
  </section>
  <!-- Services -->
  <section>
-    <h2>Чим ми займаємося</h2>
-    <ul>
+    <h2 class="Whatwedo">Чим ми займаємося</h2>
+    <ul class="Whatwedo_l list">
         <li><img src="./img/box1.jpg" alt="keyboard_Laptop" width="370" height="294"></li>
         <li><img src="./img/box2.jpg" alt="phone_man_hand" width="370" height="294"></li>
         <li><img src="./img/box3.jpg" alt="Laptop_rainbow" width="370" height="294"></li>
     </ul>
  </section>
  <!-- Team -->
- <section>
-    <h2>Наша команда</h2>
-    <ul>
+ <section class="team">
+    <h2 class="Ourteam">Наша команда</h2>
+    <ul class="Ourteam list">
         <li>
             <img src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="Ourteam_h3">Ігор Дем'яненко</h3>
+            <p class="Ourteam_p">Product Designer</p>
         </li>
         <li>
             <img src="./img/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="Ourteam_h3">Ольга Рєпіна</h3>
+            <p class="Ourteam_p">Frontend Developer</p>
         </li>
         <li>
             <img src="./img/img3.jpg" alt="Микола Тарасов" width="270" height="260">
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="Ourteam_h3">Микола Тарасов</h3>
+            <p class="Ourteam_p">Marketing</p>
         </li>
         <li>
             <img src="./img/img4.jpg" alt="Михайло Єрмаков" width="270" height="260">
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="Ourteam_h3">Михайло Єрмаков</h3>
+            <p class="Ourteam_p">UI Designer</p>
         </li>
     </ul>
  </section>
  </main>
  <!-- Footer -->
- <footer> 
-  <a href="./index.html"><span>Web</span>Studio</a>
-   <address>
-    <ul>
-      <li><a target="_blank" rel="noopener noreferrer nofollow" href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
-                                  м. Київ, пр-т Лесі Українки, 26</a></li>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-   </address>
+ <footer class="footer">
+    <a class="footer_l link" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
+    <address class="footer_a">
+        <ul class="footer_list list">
+            <li class="footer_list"><a class="footer_list_adr link" target="_blank" rel="noopener noreferrer nofollow"
+                    href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
+                    м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="footer_list"><a class="footer_list_mail link"
+                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="footer_list"><a class="footer_list_tel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </address>
  </footer>
 </html>
