--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <ul class="benefits list">
         <li>
             <h3 class="name_benef">Увага до деталей</h3>
-            <p class="benef_txt">Ідейні міркування, і навіть початок </br>
-                 повсякденної роботи з формування </br>
+            <p class="benef_txt">Ідейні міркування, і навіть початок 
+                 повсякденної роботи з формування 
                   позиції.</p>
         </li>
         <li>
@@ -73,7 +73,7 @@
  <!-- Team -->
  <section class="team">
     <h2 class="Ourteam">Наша команда</h2>
-    <ul class="Ourteam list">
+    <ul class="Ourteam_l list">
         <li>
             <img src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
             <h3 class="Ourteam_h3">Ігор Дем'яненко</h3>
