--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="header_list_l list">
             <li class="header_item"><a class="header_item_l link" href="./index.html">Студія</a></li>
             <li class="header_item"><a class="header_item_l link" href="./portfolio.html">Портфоліо</a></li>
-            <li class="header_item"><a class="header_item_l link" href="#">Контакти</a></li>
+            <li class="header_item"><a class="header_item_l link" href="#contacts">Контакти</a></li>
         </ul>
     </nav>
 
@@ -102,7 +102,7 @@
     <a class="footer_l link" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
     <address class="footer_a">
         <ul class="footer_list list">
-            <li class="footer_list"><a class="footer_list_adr link" target="_blank" rel="noopener noreferrer nofollow"
+            <li class="footer_list" id="contacts"><a class="footer_list_adr link" target="_blank" rel="noopener noreferrer nofollow"
                     href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
                     м. Київ, пр-т Лесі Українки, 26</a></li>
             <li class="footer_list"><a class="footer_list_mail link"
