--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <ul class="header_list_l list">
         <li class="header_item"><a class="header_item_l link" href="./index.html">Студія</a></li>
         <li class="header_item"><a class="header_item_l link" href="./portfolio.html">Портфоліо</a></li>
-        <li class="header_item"><a class="header_item_l link" href="#">Контакти</a></li>
+        <li class="header_item"><a class="header_item_l link" href="#contacts">Контакти</a></li>
     </ul>
   </nav>
 
@@ -115,7 +115,7 @@
  <!-- Footer -->
  <footer class="footer"> 
   <a class="footer_l link" href="./index.html"><span class="header_logo_web">Web</span>Studio</a>
-   <address class="footer_a">
+   <address class="footer_a" id="contacts">
     <ul class="footer_list list">
       <li class="footer_list"><a class="footer_list_adr link" target="_blank" rel="noopener noreferrer nofollow" href="https://goo.gl/maps/8ZdvYXHcTq7ifbDh6">
                                   м. Київ, пр-т Лесі Українки, 26</a></li>
